<resources>
    <string name="app_name">CallerIdAppPrototype</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts">Contacts</string>
    <string name="incoming_calls">Incoming Calls</string>
    <string name="block_list">Blocked Contacts</string>
    <string name="block">Block</string>
    <string name="search">Search Contacts..</string>
    <string name="unblock">Unblock</string>
    <string name="receive_a_call">Receive Call</string>
    <string name="is_calling">is calling</string>
    <string name="end_call">End Call</string>
    <string name="go_up">go up</string>
    <string name="no_result_found">No Result Found.</string>
</resources>